2002-03-26  Damien Sandras  <dsandras@seconix.com>	

	* src/gdkvideoio.cpp: Ported. Removed all deprecated calls.
	
	* src/ils.cpp: Fixed memory leak.

	* src/ldap_window.cpp: Ported. Removed all deprecated calls. Added
	a toolbar with buttons to improve usability. The double-click needs
	to be done (to call sb).

	* src/toolbar.cpp: Ported. Removed all deprecated calls.
		
	
2002-03-25  Damien Sandras  <dsandras@seconix.com>	

	* src/ldap_window.cpp: Removed all deprecated calls and ported to
	GtkTreeView the list and the search. Changing the search filter
	resets the search, and typing Enter do an incremental search.
	What a job!
	
	* src/toolbar.cpp: Removed all deprecated calls.

	* src/gnomemeeting.cpp: Removed the stress test.

	* src/ils.cpp: Ported to GtkTreeView.
	
2002-03-23  Damien Sandras  <dsandras@seconix.com>	

	* Removed intl and macros from CVS, Eeek!
	
2002-03-23  Damien Sandras  <dsandras@seconix.com>	

	* src/Makefile.am: Added -DDATADIR for the new gnome_program_init function.

	* src/gdkvideoio.cpp: Playing with copy of pixbuf instead of the real
	pixbuf to make sure to have it if it is destroyed inside PWLIB.

	* src/endpoint.cpp: Fixed the VideoGrabber Reset Code.

	* src/main_window.cpp: Ported gnome_init_with_popt_table to gnome_program_init.
	
2002-03-22  Damien Sandras  <dsandras@seconix.com>	

	* Begin of the Gnome 2 port.

	* configure.in: Ported to gnome2

	* misc.cpp: Ported the history to Gnome2

	* gdkvideoio.cpp, main_window.cpp: Ported the drawingarea to a gtk_image.

	* (...) : New branch.
	
-- BRANCHED HEAD <-> GNOME_1
2002-03-07  Damien Sandras  <dsandras@seconix.com>	

	* pixmaps/gnomemeeting-logo.png: Updated to version 0.85.1
	
2002-03-07  Damien Sandras  <dsandras@seconix.com>	

	* src/gnomemeeting.cpp: Disconnect sensitive again when calling.

	* src/main_window.cpp: Main window is now resizeable.

	* src/pref_window.cpp: Fixed tooltips.

	* src/pref_window.h: Fixed bad declaration.
	