@@ -1,3 +1,15 @@
+2002-03-27  Damien Sandras  <dsandras@seconix.com>	
+
+	* src/callbacks.cpp: Ported to Gnome2. Removed unused callback for
+	ILS.
+
+	* src/ldap_window.cpp: Added callback to call somebody when double-
+	clicking on his name in the XDAP list.
+
+	* src/main_window.cpp: Ported to Gnome2.
+
+	* src/menu.cpp: Removed unused function.
+	
 2002-03-26  Damien Sandras  <dsandras@seconix.com>	
 
 	* src/gdkvideoio.cpp: Ported. Removed all deprecated calls.
